; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_hwgpe.c_acpi_hw_disable_all_gpes.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_hwgpe.c_acpi_hw_disable_all_gpes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hw_disable_all_gpes = common dso_local global i32 0, align 4
@acpi_hw_disable_gpe_block = common dso_local global i32 0, align 4
@acpi_hw_clear_gpe_block = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_hw_disable_all_gpes() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @hw_disable_all_gpes, align 4
  %4 = call i32 @ACPI_FUNCTION_TRACE(i32 %3)
  %5 = load i32, i32* @acpi_hw_disable_gpe_block, align 4
  %6 = call i32 @acpi_ev_walk_gpe_list(i32 %5, i32* null)
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* @acpi_hw_clear_gpe_block, align 4
  %8 = call i32 @acpi_ev_walk_gpe_list(i32 %7, i32* null)
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @return_ACPI_STATUS(i32 %9)
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @ACPI_FUNCTION_TRACE(i32) #1

declare dso_local i32 @acpi_ev_walk_gpe_list(i32, i32*) #1

declare dso_local i32 @return_ACPI_STATUS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
